# computecpp-sdk

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Lin1  README.asciidoc  README.md
.github/workflows/: build-test.yml
.travis/: before_install.sh  build_computecpp.sh  computecpp_workaround.sh
cmake/Modules/: ComputeCppCompilerChecks.cmake  FindCXX11.cmake  FindComputeCpp.cmake
cmake/toolchains/: arm-gcc-poky.cmake  gcc-generic.cmake
demos/: CMakeLists.txt  README.md
demos/fluid/: CMakeLists.txt  fluid.cpp  fluid.h  main.cpp
demos/game_of_life/: CMakeLists.txt  main.cpp  sim.cpp  sim.hpp
demos/include/: codeplay_demo.hpp  double_buf.hpp  integrator.hpp  sycl_bufs.hpp  tuple_utils.hpp
demos/mandelbrot/: CMakeLists.txt  main.cpp  mandel-double.cpp  mandel-float.cpp  mandel.cpp  mandel.hpp
demos/nbody/: CMakeLists.txt  main.cpp  sim.cpp  sim.hpp
documents/: ComputeCpp_Anatomy_Of_App.asciidoc  ComputeCpp_FAQ.asciidoc  ComputeCpp_GettingStarted.asciidoc  ComputeCpp_Getting_Started.asciidoc  ComputeCpp_Glossary.asciidoc  ComputeCpp_Integration_Guide.asciidoc  ComputeCpp_Overview.asciidoc  Makefile  adoc_links.adoc  codeplay-doc-theme.yml
documents/diagrams_gliffy/: BuildIntegration.gliffy  ComputeCppPackageContent.gliffy  ComputeCppThreadDiagram.gliffy  ComputeCppruntime.gliffy  parallel_for_execution.gliffy
include/ivka/: ivka.hpp
include/legacy-pointer/: README.adoc  README.md  legacy_pointer.hpp
include/stl-tuple/: STLTuple.hpp
include/vptr/: README.adoc  README.md  implementation.asciidoc  implementation.md  pointer_alias.hpp  virtual_ptr.hpp
samples/: CMakeLists.txt  README.md  accessors.cpp  convolution.cpp  custom-device-selector.cpp  example-sycl-application.cpp  gaussian-blur.cpp  images.cpp  ivka.cpp  matrix-multiply.cpp  monte-carlo-pi.cpp  opencl-c-interop.cpp  reinterpret.cpp  scan.cpp  simple-example-of-vectors.cpp  simple-local-barrier.cpp  simple-private-memory.cpp  simple-vector-add.cpp  smart-pointer.cpp  stack_allocator.hpp  subgroup-scan.cpp  sync-handler.cpp  template-function-object.cpp  use-onchip-memory.cpp  using-function-objects.cpp  vector-addition-examples.cpp  vector-addition-tiled.cpp  vptr.cpp
samples/accessors/: CMakeLists.txt  accessors.cpp
samples/async-handler/: CMakeLists.txt  async-handler.cpp
samples/async_handler/: CMakeLists.txt  async_handler.cpp
samples/builtin-kernel-example/: CMakeLists.txt  builtin-kernel-example.cpp
samples/custom-device-selector/: CMakeLists.txt  custom-device-selector.cpp
samples/custom_device_selector/: CMakeLists.txt  custom_device_selector.cpp
samples/example-sycl-application/: CMakeLists.txt  example-sycl-application.cpp
samples/example_sycl_application/: CMakeLists.txt  example_sycl_application.cpp
samples/example_vptr/: CMakeLists.txt  example_vptr.cpp
samples/gaussian-blur/: CMakeLists.txt  gaussian-blur.cpp
samples/gaussian_blur/: CMakeLists.txt  gaussian_blur.cpp
samples/hello-world/: CMakeLists.txt  hello-world.cpp
samples/hello_world/: CMakeLists.txt  hello_world.cpp
samples/images/: CMakeLists.txt  images.cpp
samples/ivka/: CMakeLists.txt  ivka.cpp
samples/matrix-multiply/: CMakeLists.txt  matrix-multiply.cpp
samples/matrix_multiply/: CMakeLists.txt  matrix_multiply.cpp
samples/monte-carlo-pi/: CMakeLists.txt  monte-carlo-pi.cpp
samples/opencl-c-interop/: CMakeLists.txt  opencl-c-interop.cpp
samples/opencl_c_interop/: CMakeLists.txt  opencl_c_interop.cpp
samples/parallel-for/: CMakeLists.txt  parallel-for.cpp
samples/parallel_for/: CMakeLists.txt  parallel_for.cpp
samples/placeholder-accessors/: CMakeLists.txt  placeholder-accessors.cpp
samples/reduction/: CMakeLists.txt  reduction.cpp
samples/reinterpret/: CMakeLists.txt  reinterpret.cpp
samples/scan/: CMakeLists.txt  scan.cpp
samples/simple-example-of-vectors/: CMakeLists.txt  simple-example-of-vectors.cpp
samples/simple-local-barrier/: CMakeLists.txt  simple-local-barrier.cpp
samples/simple-private-memory/: CMakeLists.txt  simple-private-memory.cpp
samples/simple-vector-add/: CMakeLists.txt  simple-vector-add.cpp
samples/simple_example_of_vectors/: CMakeLists.txt  simple_example_of_vectors.cpp
samples/simple_local_barrier/: CMakeLists.txt  simple_local_barrier.cpp
samples/simple_private_memory/: CMakeLists.txt  simple_private_memory.cpp
samples/simple_vector_add/: CMakeLists.txt  simple_vector_add.cpp
samples/smart-pointer/: CMakeLists.txt  smart-pointer.cpp
samples/smart_pointer/: CMakeLists.txt  smart_pointer.cpp
samples/sync-handler/: CMakeLists.txt  sync-handler.cpp
samples/template-function-object/: CMakeLists.txt  template-function-object.cpp
samples/template_functor/: CMakeLists.txt  template_functor.cpp
samples/tiled-convolution/: CMakeLists.txt  common.hpp  copy.hpp  readme.md  tiled-conv.hpp  tiled-convolution-naive.cpp  tiled-convolution-optimized.cpp  tiled-convolution-standard.cpp  tiled-convolution.cpp
samples/use-onchip-memory/: CMakeLists.txt  use-onchip-memory.cpp
samples/using-function-objects/: CMakeLists.txt  using-function-objects.cpp
samples/using_functors/: CMakeLists.txt  using_functors.cpp
samples/vptr/: CMakeLists.txt  vptr.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/legacy-pointer/: CMakeLists.txt  basic.cc  offset.cc
tests/vptr/: CMakeLists.txt  accessor.cc  basic.cc  offset.cc  runtime.cc  space.cc
tools/Linux/cmake_basic/: CMakeLists.txt
tools/Visual Studio 2015/: ComputeCpp SDK - Visual Studio 2015.sln
tools/cmake_basic/: CMakeLists.txt
tools/extract_ir/: README.adoc  README.md  extract_ir.py
tools/makefile_basic/: Makefile  app.cpp
utils/cuda_to_sycl/: CUDAversion.cpp  CUDAversion.cu  README.adoc  SYCLversion.cpp  makefile
utils/legacy_pointer/: CMakeLists.txt  README.adoc  demo_pointer.cpp  legacy_pointer.h
utils/legacy_pointer/tests/: CMakeLists.txt  CMakeLists.txt.in  basic.cc  offset.cc
utils/vptr/: CMakeLists.txt  README.adoc
utils/vptr/tests/: CMakeLists.txt  accessor.cc  basic.cc  offset.cc  runtime.cc  space.cc
(+140 files in other folders)
