set(SOURCE_NAME "example_vptr")

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED on)

if(NOT COMPUTECPP_SDK_VIRTUAL_POINTER_PREFIX)
  message (FATAL_ERROR
    "ComputeCpp SDK Virtual Pointer not found! (please set COMPUTECPP_SDK_VIRTUAL_POINTER_PREFIX)")
else()
  include_directories(${COMPUTECPP_SDK_VIRTUAL_POINTER_PREFIX}/include)
endif()

add_executable(
  ${SOURCE_NAME}
  ${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE_NAME}.cpp
)
add_sycl_to_target(
  ${SOURCE_NAME}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE_NAME}.cpp
)
add_test(
  NAME ${SOURCE_NAME}
  COMMAND ${SOURCE_NAME}
)
install(
  TARGETS ${SOURCE_NAME}
  RUNTIME DESTINATION bin
)
